# component-init

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/src/: main.rs
guest-rust/macro/src/: lib.rs
src/: lib.rs
transform/src/: lib.rs
wasmtime/: Cargo.toml
wasmtime/src/: lib.rs
wasmtime/tests/: rust.rs  test.rs  wat.rs
