[package]
name = "component-init"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
wasm-convert = { git = "https://github.com/benbrandt/wasm-convert", rev = "4c5a4b58ce92185a8f8d24fdc297c7f2df664ce2" }
async-trait = "0.1.82"
futures = "0.3.30"
wasm-encoder = "0.216.0"
wasmparser = "0.216.0"
