[workspace]
members = [
    "cli",
    "guest-rust",
    "guest-rust/macro",
    "test-programs",
    "test-programs/artifacts",
    "transform",
    "wasmtime",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dicej/component-init"

[workspace.dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
clap = { version = "4", features = ["derive"] }
component-init = { version = "0.2.0", path = "./guest-rust" }
component-init-macro = { version = "0.2.0", path = "./guest-rust/macro" }
component-init-transform = { version = "0.2.0", path = "./transform" }
component-init-wasmtime = { version = "0.2.0", path = "./wasmtime" }
futures = "0.3.31"
quote = "1.0"
syn = "2.0"
test-programs = { path = "./test-programs" }
test-programs-artifacts = { path = "./test-programs/artifacts" }
tokio = { version = "1", features = ["full"] }
# TODO: switch to wasm-tools 1.241.0 when available
wasm-encoder = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "b1d8ff59", features = ["wasmparser"] }
wasmparser = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "b1d8ff59" }
wasm-metadata = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "b1d8ff59" }
wat = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "b1d8ff59" }
wasmtime = "36.0.2"
wasmtime-wasi = "36.0.2"
wasmtime-wasi-http = "36.0.2"
wit-bindgen = "0.45.0"
